[gd_scene load_steps=5 format=2]

[ext_resource path="res://Games/CardsAgainstHumanity/Main.gd" type="Script" id=1]

[sub_resource type="Animation" id=1]

resource_name = "RevealChoices"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Selection:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Selection:rect_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 1 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=2]

resource_name = "Victory"
length = 5.0
loop = false
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("VictorySweep/Label:rect_rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2, 2.5, 3, 3.5, 4, 4.5, 5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 60.0, -60.0, 60.0, -60.0, 0.0, 60.0, -60.0, 60.0, -60.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("VictorySweep/Label:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.75, 1.75, 2.5, 3.25, 4.25, 5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.875, 1, 0, 1 ), Color( 0, 1, 0.015625, 1 ), Color( 0, 0.132813, 1, 1 ), Color( 0.875, 1, 0, 1 ), Color( 0, 1, 0.015625, 1 ), Color( 0, 0.132813, 1, 1 ), Color( 1, 0, 0, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("VictorySweep/Particles2D:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.5, 2.5, 4, 5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.721741, 1, 0.621094, 1 ), Color( 1, 1, 1, 1 ), Color( 0.721741, 1, 0.621094, 1 ), Color( 1, 0.621094, 0.621094, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("VictorySweep/Particles2D:emitting")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("VictorySweep:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/5/type = "method"
tracks/5/path = NodePath(".")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "end_game_for_all"
} ]
}

[sub_resource type="ParticlesMaterial" id=3]

render_priority = 0
trail_divisor = 1
emission_shape = 1
emission_sphere_radius = 128.0
flag_align_y = false
flag_rotate_y = false
flag_disable_z = true
spread = 180.0
flatness = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 100.0
initial_velocity_random = 0.0
angular_velocity = 5.0
angular_velocity_random = 0.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = -97.3
linear_accel_random = 0.0
radial_accel = 0.0
radial_accel_random = 0.0
tangential_accel = 0.0
tangential_accel_random = 0.0
damping = 0.0
damping_random = 0.0
angle = 0.0
angle_random = 0.0
scale = 3.0
scale_random = 0.5
color = Color( 1, 1, 1, 1 )
hue_variation = 0.0
hue_variation_random = 0.0
anim_speed = 0.0
anim_speed_random = 0.0
anim_offset = 0.0
anim_offset_random = 0.0
anim_loop = false
_sections_unfolded = [ "Angular Velocity", "Color", "Damping", "Emission Shape", "Flags", "Gravity", "Hue Variation", "Initial Velocity", "Linear Accel", "Scale", "Spread", "Trail" ]

[node name="Main" type="Node2D" index="0"]

position = Vector2( -15, -18 )
script = ExtResource( 1 )
_sections_unfolded = [ "Pause" ]

[node name="Label" type="Label" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -363.0
margin_top = -174.0
margin_right = -303.0
margin_bottom = -160.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Waiting..."
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Panel" type="Panel" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -456.0
margin_top = -145.0
margin_right = -190.0
margin_bottom = 280.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="Players" type="GridContainer" parent="Panel" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = -1.0
margin_right = 269.0
margin_bottom = 424.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 2
_sections_unfolded = [ "Margin", "Material", "Rect", "Size Flags", "Visibility", "custom_constants" ]

[node name="Hand" type="Container" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 17.0
margin_top = -140.0
margin_right = 493.0
margin_bottom = 193.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Rect" ]

[node name="Submit" type="Button" parent="Hand" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -190.0
margin_top = 343.0
margin_right = -16.0
margin_bottom = 363.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 1
disabled = true
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Submit"
flat = false
align = 1
_sections_unfolded = [ "Margin", "Size Flags" ]

[node name="BlackCard" type="Panel" parent="Hand" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -196.0
margin_top = -1.0
margin_right = -9.0
margin_bottom = 338.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Size Flags" ]

[node name="Description" type="RichTextLabel" parent="Hand/BlackCard" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 2.0
margin_top = 2.0
margin_right = 186.0
margin_bottom = 302.0
rect_min_size = Vector2( 180, 300 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true
bbcode_text = "Black Cards"
visible_characters = -1
percent_visible = 1.0
meta_underlined = true
tab_size = 4
text = "Black Cards"
scroll_active = true
scroll_following = false
selection_enabled = false
override_selected_font_color = false
_sections_unfolded = [ "BBCode", "Margin", "Rect", "Size Flags" ]

[node name="Your Hand" type="Label" parent="Hand" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 4.0
margin_top = -20.0
margin_right = 69.0
margin_bottom = -6.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Your Hand"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="CardContainer" type="GridContainer" parent="Hand" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1.0
margin_right = 430.0
margin_bottom = 381.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 3
_sections_unfolded = [ "Size Flags" ]

[node name="Selection" type="Container" parent="." index="3"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -179.0
margin_top = -140.0
margin_right = 610.0
margin_bottom = 213.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Rect", "Visibility" ]

[node name="Selections" type="Label" parent="Selection" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 36.0
margin_top = -13.0
margin_right = 101.0
margin_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Choices"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="CardContainer" type="GridContainer" parent="Selection" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 429.0
margin_bottom = 301.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
columns = 3
_sections_unfolded = [ "Size Flags" ]

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="4"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/RevealChoices = SubResource( 1 )
anims/Victory = SubResource( 2 )
blend_times = [  ]

[node name="VictorySweep" type="Container" parent="." index="5"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Visibility" ]

[node name="Particles2D" type="Particles2D" parent="VictorySweep" index="0"]

position = Vector2( -15, 1 )
scale = Vector2( 3, 3 )
emitting = false
amount = 256
lifetime = 1.0
one_shot = false
preprocess = 0.0
speed_scale = 1.0
explosiveness = 0.1
randomness = 0.25
fixed_fps = 0
fract_delta = true
visibility_rect = Rect2( -100, -100, 200, 200 )
local_coords = true
draw_order = 0
process_material = SubResource( 3 )
texture = null
normal_map = null
h_frames = 1
v_frames = 1
_sections_unfolded = [ "Drawing", "Material", "Process Material", "Time", "Transform", "Visibility" ]

[node name="Label" type="Label" parent="VictorySweep" index="1"]

modulate = Color( 0.875, 1, 0, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -94.0
margin_top = 28.0
margin_right = 106.0
margin_bottom = 58.0
rect_scale = Vector2( 3, 3 )
rect_pivot_offset = Vector2( 100, 15 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Congrats!"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Material", "Rect", "Visibility" ]

[connection signal="pressed" from="Hand/Submit" to="." method="_on_hand_submit_pressed"]


